--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Will you go out for dinner with me Sujata?</h2>
+        <h2 class="question">Will you be my girfriend Aasha?</h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
@@ -18,3 +18,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
